--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   font-family: cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
 }
 
 code {
