--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ code {
 
 /* About Page css */
 .author-button:hover {
-  background-color: limegreen; 
+  background-color: limegreen;
   border-color: limegreen;
 }
 
@@ -53,4 +53,46 @@ code {
   background-color: transparent;
   border: 2px solid transparent;
   transition: background-color 0.3s, border-color 0.3s;
+}
+
+/* CrystalList.css */
+
+.CrystalList {
+  /* Add your container styling here */
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  border: 1px solid #ccc;
+  padding: 16px;
+  margin: 10px;
+  width: calc(
+    60% - 20px
+  ); /* Adjust width as needed for three cards per row */
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s;
+  word-wrap: break-word;
+}
+
+.card:hover {
+  background-color: limegreen;
+  cursor: pointer;
+}
+
+.card h3 {
+  margin: 0;
+}
+
+.card p {
+  margin: 5px 0;
+}
+
+/* Optional: Styling for the link */
+.card-link {
+  text-decoration: none;
+  color: inherit;
 }
