--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   font-family: cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
 }
 
 code {
@@ -256,4 +256,34 @@ code {
 
 .EditCrystal .cancel-button:hover {
   background-color: #999;
+}
+
+.dark-mode-toggle {
+  background-color: #333;
+  color: #fff;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.light-mode {
+  background-color: #fff;
+  color: #333;
+}
+
+.dark-mode {
+  background-color: lightgrey;
+  color:black;
+}
+/* Light Mode Styles */
+body {
+  background-color: #fff;
+  color: white;
+}
+
+/* Dark Mode Styles */
+body.dark-mode {
+  background-color: #1f1f1f;
+  color: #fff;
 }
